Fixed spacing and small details

--- a/source/stylesheets/_footer.scss
+++ b/source/stylesheets/_footer.scss
@@ -92,5 +92,7 @@
     @include grid-push(2.8);
     color: $white--rvnsc;
     margin-top: $margin--small - 3;
+    font-family: pt-mono-italic;
+
   }
 }
