--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -21,3 +21,7 @@
 ) {
   font-style: normal;
 }
+
+i {
+  font-family: pt-mono-regular;
+}
