--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -13,17 +13,3 @@
 @import "projects-illustration";
 @import "typography";
 @import "contact";
-
-/****
-1) Apply BEM naming conventions:
-http://getbem.com/naming/
-
-2) Apply variables to universalize content.
-
-3) Begin adding Wordpress content to apply across project.
-
-4) Create and apply iconography for visual brand
-
-5) Deployment thoughts:
-https://github.com/karlfreeman/middleman-deploy
-****/
